SERVER-80530: Check if transaction is in progress before aborting it in scopeGuard in `runWithTransactionsFromOpCtx() `